# ha-pressensor

./: .gitignore  README.md  button.py  client.py  const.py  coordinator.py  entity.py  hacs.json  pyproject.toml  sensor.py  strings.json
custom_components/pressensor/: __init__.py  binary_sensor.py  button.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  strings.json  switch.py
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_switch.py
